Bug 51339, XHTML map elements did not work, r=harishd, sr=vidur.